packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__filtered_completed_tasks_no_parallel_section.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
"                                                                                                                        "
"  ✔    task1                                                                                                -       <1ms"
"  ✔    task2                                                                                                -       <1ms"
"                                                                                                                        "
"  ·    task3                                                                                              ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  Filter: task                                                                                                          "
"  Press <esc> to clear filter                                                                                           "
"                                                                                                                        "
"                                    quit: q  help: ?  navigate: ↑ ↓  filter: /  pin output: 1 or 2  show output: <enter>"
