packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__initial_placeholder_promoted_to_first_in_progress.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
" │                                                                                                                      "
">│⠋    task1                                                                                              ...        ..."
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"  ·    task2                                                                                              ...        ..."
"  ·    task3                                                                                              ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                    quit: q  help: ?  navigate: ↑ ↓  filter: /  pin output: 1 or 2  show output: <enter>"
