packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__initial_rendering.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 2702
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
"                                                                                                                        "
"                                                                                                                        "
"> ·    app1:build                                                                                         ...        ..."
"  ·    app1:test                                                                                          ...        ..."
"  ·    app2:lint                                                                                          ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
