packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__medium_width_with_long_task_names.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                "
" NX    Running Running Test Tasks....   Duration"
"                                                "
"                                                "
"> ·    another-very-long-task-name-fo        ..."
"  ·    very-long-task-name-that-excee        ..."
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
"                                                "
