packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__mixed_statuses_batch_collapsed.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Mixed Status Batch Test...                                                               Cache   Duration"
" │                                                                                                                      "
">│⠋ ▶  build-batch (4)                                                                                                  "
" │·    Waiting for task...                                                                                              "
" │·    Waiting for task...                                                                                              "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
