packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__mixed_statuses_in_running_batch.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Mixed Status Batch Test...                                                               Cache   Duration"
" │                                                                                                                      "
">│⠋ ▼  build-batch (4)                                                                                                  "
" │✔      app:build                                                                                          -        ..."
" │✖      app:test                                                                                           -        ..."
" │⠋      shared:build                                                                                     ...       <1ms"
" │·      shared:test                                                                                        -        ..."
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
