packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__more_in_progress_tasks_than_parallel_limit.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
" NX    Running Test Tasks...                                    Cache   Duration"
" │                                                                              "
">│⠋    app1:test                                                  ...       <1ms"
" │⠋    app2:build                                                 ...       <1ms"
" │⠋    app3:lint                                                  ...       <1ms"
" │⠋    app4:deploy                                                ...       <1ms"
" └                                                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
